Fix canvas being too small on large screens.

--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ body {
 #canvas-container > canvas {
 	max-height: 100%;
 	max-width: 100%;
+	min-height: 100%;
+	min-width: 100%;
 	touch-action: none;
 }
 
